force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age of contact</description>
    <formula>IF( NOT( ISBLANK(Birthdate) ) ,  TEXT(YEAR( TODAY()) - YEAR(Birthdate)) + &apos; Years&apos;, TEXT(0) + &apos; Years&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age of contact based on bate of birth</inlineHelpText>
    <label>Age</label>
    <type>Text</type>
</CustomField>