force-app/main/default/objects/Contact/fields/GST_No__c.field-meta.xml
<CustomField>
    <fullName>GST_No__c</fullName>
    <description>Vendor GST Number</description>
    <inlineHelpText>Enter your GST number</inlineHelpText>
    <label>GST No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>