force-app/main/default/objects/Contact/fields/TAN_No__c.field-meta.xml
<CustomField>
    <fullName>TAN_No__c</fullName>
    <description>Vendor TAN number</description>
    <inlineHelpText>Enter your TAN number</inlineHelpText>
    <label>TAN No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>